[package]
name = "iso8601_interval"
version = "0.1.0"
edition = "2021"
authors = [
    "PowerSnail <hj@powersnail.com>"
]
description = "Parses ISO8601 time intervals."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
nom = "7.1.3"
thiserror = "1.0.40"
