[package]
name = "iso8601_interval"
version = "0.2.0"
edition = "2021"
authors = [
    "PowerSnail <hj@powersnail.com>"
]
description = "Parses ISO8601 time intervals."
homepage = "https://github.com/PowerSnail/iso8601_interval"
repository = "https://github.com/PowerSnail/iso8601_interval"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
nom = "7.1.3"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.18.1"
